Closed Bug 561292 Opened 15 years ago Closed 14 years ago

TB doesn't keep track of forwarded messages on IMAP servers that don't support $forwarded IMAP flag

Categories

(MailNews Core :: Networking: IMAP, defect)

x86
Windows XP
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 3.3a2

People

(Reporter: filip.matijevic.pz, Assigned: Bienvenu)

References

()

Details

Attachments

(2 files, 1 obsolete file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.2.3) Gecko/20100401 Firefox/3.6.3 (.NET CLR 3.5.30729) Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.1.9) Gecko/20100317 Lightning/1.0b1 Thunderbird/3.0.4 When i forward message in TB it's state shows "Forwarded", but when I refresh the view, or reopen TB all "Forwarded" messages revert back to "Read". I'm using Exchange 2007 SP2 IMAP Server, and apparently it's affected together with hMailServer, and at the same time Gmail works OK. Also "Replied" state is OK. Here are relevant links where bug is discussed: http://forums.mozillazine.org/viewtopic.php?f=31&t=1803675 http://forums.mozillazine.org/viewtopic.php?f=39&t=1788645 http://www.hmailserver.com/forum/viewtopic.php?f=7&t=17667 Reproducible: Always Steps to Reproduce: 1. Forward message 2. Do any of the following: refresh view, reopen TB, receive new message (probably triggers refresh).... Actual Results: Forwarded status reverts to Read, and forwarded icon is lost. Expected Results: Forwarded status should remain together with forwarded icon (indicator)
can you provide a IMAP log as described at https://wiki.mozilla.org/MailNews:Logging ....
IMAP log as requested by Ludovic Hirlimann
This server doesn't seem to support user-defined keywords, and $forwarded is not built-into IMAP. So I wouldn't expect the flag to propagate across machines, but I would expect it to survive on the same profile/machine.
So that's how TB keeps track of forwarded messages! So bug would be: TB doesn't keep track of forwarded messages on IMAP servers that don't support $forwarded IMAP flag and user defined IMAP flags. Maybe information stored locally gets overwritten when the TB accesses IMAP server. If that's the case then TB the workaround would be to block overwritting of local forwarded status when connected IMAP server doesn't support $forwarded or user defined flags.
So that's how TB keeps track of forwarded messages! So bug would be: TB doesn't keep track of forwarded messages on IMAP servers that don't support $forwarded IMAP flag and user defined IMAP flags. Maybe information stored locally gets overwritten when the TB accesses IMAP server. If that's the case then TB the workaround would be to block overwritting of local forwarded status when connected IMAP server doesn't support $forwarded or user defined flags.
(In reply to comment #5) > Maybe information stored locally gets > overwritten when the TB accesses IMAP server. If that's the case then TB the > workaround would be to block overwritting of local forwarded status when > connected IMAP server doesn't support $forwarded or user defined flags. Yes, that's the issue. The code shouldn't be overwriting the local forwarded flag if the server doesn't support that flag, though I thought the code checked that. It has to do that for a lot of different flags...
(In reply to comment #5) > So that's how TB keeps track of forwarded messages! So bug would be: TB doesn't > keep track of forwarded messages on IMAP servers that don't support $forwarded Please edit the summary :-)
Status: UNCONFIRMED → NEW
Component: Folder and Message Lists → Networking: IMAP
Ever confirmed: true
Product: Thunderbird → MailNews Core
QA Contact: folders-message-lists → networking.imap
Summary: Forwarded status/indicator reverts back to Read for messages forwarded on Exchange 2007 and hMailServer → TB doesn't keep track of forwarded messages on IMAP servers that don't support $forwarded IMAP flag
Assignee: nobody → bienvenu
I use hMailServer as mail server, I also conducted several tests using outlook the problem occurs only with thunderbird, I tried version 2.0.0.6 of TB and it works.The problem seems to be from version 3, now i use 3.1.4 I can be useful to someone to solve this problem? seems stupid but it is causing problems. Best regards Ivan
I use hMailServer as mail server, I also conducted several tests using outlook the problem occurs only with thunderbird, I tried version 2.0.0.6 of TB and it works.The problem seems to be from version 3, now i use 3.1.4 I can be useful to someone to solve this problem? seems stupid but it is causing problems. Best regards Ivan
I have the same problem on TB 3.1.6 for MacOS but not for all mailservers. (1) Forward flag vanishes after refresh for my emails stored on the Microsoft Exchange server in IMAP mode (SSL/TSL). (2) No problem at all on my ISP server imap.plus.net in IMAP mode. I don't know what the server is.
Attached patch proposed fix (obsolete) — Splinter Review
Make sure server supports forwarded flag before trying to sync flag based on what server says. The usual case of the server supporting the flag is covered by the xpcshell tests, and the tests still pass with this patch.
Attachment #491352 - Flags: review?(neil)
Comment on attachment 491352 [details] [diff] [review] proposed fix Why can't we use the same code that we do for MDNSent?
(In reply to comment #14) > Comment on attachment 491352 [details] [diff] [review] > proposed fix > > Why can't we use the same code that we do for MDNSent? well, in theory, we could, but that would mean we'd never clear the forwarded flag even if somehow the user managed to clear it on the server, perhaps with an other client. The MDNSent code isn't technically correct, but $forwarded is a bit more standard than MDNSent and thus more likely to be manipulated by other clients.
(In reply to comment #15) > well, in theory, we could, but that would mean we'd never clear the forwarded > flag even if somehow the user managed to clear it on the server, perhaps with > an other client. The MDNSent code isn't technically correct, but $forwarded is > a bit more standard than MDNSent and thus more likely to be manipulated by > other clients. I couldn't find an MUA that allows you to clear the forwarded flag. Like the MDNSent flag, I feel this is a flag that can only be set, not unset (well, not using primary UI at least).
(In reply to comment #16) > I couldn't find an MUA that allows you to clear the forwarded flag. Like the > MDNSent flag, I feel this is a flag that can only be set, not unset (well, not > using primary UI at least). Any MUA that lets you manipulate keywords directly would let you clear this flag. You might even be able to do it with SM if you defined a $forwarded tag (unless $ gets encoded...)
(In reply to comment #16) > I couldn't find an MUA that allows you to clear the forwarded flag. Like the > MDNSent flag, I feel this is a flag that can only be set, not unset (well, not > using primary UI at least). The bottom line is that two-way sync of imap flags is the right thing to do...
(In reply to comment #18) > The bottom line is that two-way sync of imap flags is the right thing to do... So do you plan on fixing the MDNSent flag too?
OK, this treats mdnsent the same way.
Attachment #491352 - Attachment is obsolete: true
Attachment #493113 - Flags: review?(neil)
Attachment #491352 - Flags: review?(neil)
Attachment #493113 - Flags: review?(neil) → review+
fixed on trunk.
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 3.3a2
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: