fix handling of forwarded flag on imap servers that don't support  flag, r=neil, bug 561292